--- a/client/src/pages/SummaryPage.module.css
+++ b/client/src/pages/SummaryPage.module.css
@@ -32,6 +32,7 @@
   color: var(--text-primary);
   font-size: 1.3rem;
   font-weight: 600;
+  line-height: 1.2;
 }
 
 .summaryStats {
@@ -41,14 +42,14 @@
   margin-bottom: 30px;
 }
 
-.portainerInstancesList {
-  margin-top: 30px;
+.summaryDivider {
+  height: 1px;
+  background: var(--border-color);
+  margin-bottom: 30px;
 }
 
-.portainerInstancesList h3 {
-  color: var(--text-primary);
-  margin-bottom: 15px;
-  font-size: 1.3rem;
+.portainerInstancesList {
+  margin-top: 30px;
 }
 
 .instancesGrid {
